# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

July 26, 2003
	add GL_STEREO

July 22, 2003
	add GL_MULTISAMPLEBUFFERS and GL_MULTISAMPLESAMPLES

June 11, 2003
	Surface.set_at() respects clip area
	cleaned fill circle draw

June 8, 2003
	add system font; SysFont,get_system_fonts,match_system_font

June 7, 2003
        Font() no longer segfaults on bad filename [BUG]
        add color module for simple color manipulations

June 6, 2003
	set_palette_at() index 0 fix
        draw.arc() (thanks Lalo Martins)
        Rects are pickleable

May 12, 2003
	Brett Calcott's quick fix for 'trunc' on visualc

May 10, 2003
	fix Derek Simkowiak's find of problem alphas

March 10, 2003
	add OPENGL support to image.tostring()

March 9, 2003
	Bug in Clock.tick() was delaying double
	load Font objects from any python file-like object

February 26, 2003
	Sprite and Group now new-style classes

Februrary 12, 2003
	fix immediate returns for first time.delay and time.wait

February 11, 2003
	more OSX SDLmain.m patches from Andrew Straw

February 5, 2003
	antialiased lines, from Jorge Gonzalez
	allow Font.render() with empty string

February 2, 2003
	refcount bug in Font.size [BUG]

December 5, 2002
	tilerow stuff removed

December 2, 2002
	experimental pygame.draw.tilerow()

November 14, 2002
	fix unicode bugs in Font (thanks, hcyun)

November 12, 2002
	AdvanceMAME Scale2X scaling now in transform.scale2x()

October 22, 2002
    	mixer can queue sounds and music
	channels can send finished event for sounds

October 19, 2002
    	can free software surfaces without video initialized
	added "x", "y", "w", and "h" attribs to Rect (like SDL)
	RenderUpdates.draw() doesn't union nonoverlapping

October 16, 2002
	fix crash with subsubsurface blits [BUG]
	added Surface.get_offset() and get_abs_offset()
	added Surface.get_parent() and get_abs_parent()
